@@ -15,6 +15,7 @@ Version 0.2.4 (2011-01-??)
 - Fixed toggle button not appearing for non-admins (Ticket #253)
 - Fixed global operation labels in IE7 (Ticket #253)
 - Fixed order delete button appearing for non-admins (Ticket #192)
+- Fixed issues with runonce.php database file update on certain systems
 - Improved italian address formatting (Ticket #305)
 - Improved UK address formatting (Ticket #301)
 
